# CosmicOS

./: BUILD.md  Makefile  limine.conf  rust-toolchain.toml
.github/workflows/: build.yml
kernel/: Cargo.toml  linker.ld  x86_64-cosmic.json
kernel/.cargo/: config.toml
kernel/src/: gdt.rs  interrupts.rs  main.rs  panic.rs
kernel/src/gfx/: color.rs  font.rs  mod.rs  renderer.rs
kernel/src/input/: keyboard.rs  mod.rs
kernel/src/memory/: allocator.rs  mod.rs
kernel/src/ui/: boot_screen.rs  desktop.rs  login.rs  mod.rs  window.rs
kernel/src/vfs/: mod.rs  node.rs
