[package]
name    = "cosmic-kernel"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "cosmic-kernel"
path = "src/main.rs"

[dependencies]
limine              = { git = "https://github.com/limine-bootloader/limine-rs" }
x86_64              = "0.15"
spin                = "0.9"
linked_list_allocator = "0.10"
lazy_static         = { version = "1.4", features = ["spin_no_std"] }

[profile.dev]
panic    = "abort"
opt-level = 1

[profile.release]
panic    = "abort"
lto      = true
opt-level = 2
codegen-units = 1
